# packrat

./: .gitignore  archive.meta.json  pyproject.toml
src/packrat/: archiver.py  cli.py  config.py  logging_setup.py  metadata.py
